// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm should match snapshot 1`] = `
<form
  className="LoginForm"
  onSubmit={[Function]}
>
  <h2>
    Login
  </h2>
  <label
    htmlFor="usernameOrEmail-input"
  >
    Email/Username:
    <input
      id="usernameOrEmail-input"
      name="usernameOrEmail"
      onChange={[Function]}
      type="text"
    />
  </label>
  <label
    htmlFor="password-input"
  >
    Password:
    <input
      id="password-input"
      name="password"
      onChange={[Function]}
      type="password"
    />
  </label>
  <div
    className="error-msg"
  />
  <button
    className="signin-btn"
    type="submit"
  >
    LOGIN
  </button>
  <p
    className="register-link"
  >
    Don't have an account?
    <Link
      to="/register"
    >
      <span>
         Register Here
      </span>
    </Link>
  </p>
</form>
`;

exports[`LoginForm should match snapshot when mounted 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <LoginForm
      addUser={[Function]}
      error=""
      isFetching={false}
    >
      <form
        className="LoginForm"
        onSubmit={[Function]}
      >
        <h2>
          Login
        </h2>
        <label
          htmlFor="usernameOrEmail-input"
        >
          Email/Username:
          <input
            id="usernameOrEmail-input"
            name="usernameOrEmail"
            onChange={[Function]}
            type="text"
          />
        </label>
        <label
          htmlFor="password-input"
        >
          Password:
          <input
            id="password-input"
            name="password"
            onChange={[Function]}
            type="password"
          />
        </label>
        <div
          className="error-msg"
        />
        <button
          className="signin-btn"
          type="submit"
        >
          LOGIN
        </button>
        <p
          className="register-link"
        >
          Don't have an account?
          <Link
            to="/register"
          >
            <a
              href="/register"
              onClick={[Function]}
            >
              <span>
                 Register Here
              </span>
            </a>
          </Link>
        </p>
      </form>
    </LoginForm>
  </Router>
</BrowserRouter>
`;
